changed About and Avenues

--- a/index.html
+++ b/index.html
@@ -149,30 +149,29 @@
 
         <div class="row">
 
-          <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/about.jpg");'>
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+          <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/logo.png");'>
+            <a href="https://www.youtube.com/watch?v=cSxfoHOJkIg" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
 
             <div class="content">
-              <h3>Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong></h3>
+              <h1><strong>About</strong></h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                Established in 2007, Rotaract club of GITAM(RACG) is a university based club committed to serve the community through volunteer service projects and social outreach. RACG is one of the 40 clubs in R. I. District 3020, which comprises of six revenue districts viz; Krishna, West Godavari, East Godavari, Visakhapatnam, Vizianagaram & Srikakulam. The Rotaract Club of GITAM works under the guidance of Rotary Club of Visakhapatnam. 
               </p>
               <p class="font-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                Rotaract stands for "Rotary in Action" and has the following goals:
               </p>
               <ul>
-                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <li><i class="bx bx-check-double"></i> To develop professional and leadership skills.</li>
+                <li><i class="bx bx-check-double"></i> To emphasize respect for the rights of others, and to promote ethical standards and the dignity of all useful occupations.</li>
+                <li><i class="bx bx-check-double"></i> To provide opportunities for young people to address the needs and concerns of the community and our world.</li>
+                <li><i class="bx bx-check-double"></i> To provide opportunities for working in cooperation with sponsoring Rotary clubs.</li>
+                <li><i class="bx bx-check-double"></i> To motivate young people for eventual membership in Rotary.</li>
               </ul>
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum
+                
               </p>
             </div>
 
@@ -228,10 +227,10 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Check our tasty <span>Menu</span></h2>
+          <h2><span>Avenues</span></h2>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Show All</li>
@@ -240,13 +239,13 @@
               <li data-filter=".filter-specialty">Specialty</li>
             </ul>
           </div>
-        </div>
+        </div> -->
 
         <div class="row menu-container">
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span>$5.95</span>
+              <a href="#">Community services</a>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -255,7 +254,7 @@
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="#">Bread barrel</a><span>$6.95</span>
+              <a href="#">Professional services</a>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -264,7 +263,7 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Crab Cake</a><span>$7.95</span>
+              <a href="#">Club services</a>
             </div>
             <div class="menu-ingredients">
               A delicate crab cake served on a toasted roll with lettuce and tartar sauce
@@ -273,7 +272,7 @@
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#">Caesar Selections</a><span>$8.95</span>
+              <a href="#">Youth services/ New Generation</a>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -282,7 +281,7 @@
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="#">Tuscan Grilled</a><span>$9.95</span>
+              <a href="#">Rotary TEACH</a>
             </div>
             <div class="menu-ingredients">
               Grilled chicken with provolone, artichoke hearts, and roasted red pesto
@@ -291,14 +290,14 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Mozzarella Stick</a><span>$4.95</span>
+              <a href="#">International services</a>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
+          <!-- <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
               <a href="#">Greek Salad</a><span>$9.95</span>
             </div>
@@ -323,7 +322,7 @@
             <div class="menu-ingredients">
               Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
             </div>
-          </div>
+          </div> -->
 
         </div>
 
