--- a/clubservices.html
+++ b/clubservices.html
@@ -80,25 +80,50 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Inner Page</h2>
+          <h2>Club Services</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Inner Page</li>
+            <li>Club Services</li>
           </ol>
         </div>
 
       </div>
     </section><!-- End Breadcrumbs Section -->
 
-    <section class="inner-page">
+    <!-- <section class="inner-page">
       <div class="container">
         <p>
           Example inner page template
         </p>
       </div>
-    </section>
+    </section> -->
 
-  </main><!-- End #main -->
+    <div class="row event-item event">
+      <div class="col-lg-6">
+        <img src="assets/img/event-birthday.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
+        <h3>Birthday Parties</h3>
+        <div class="price">
+          <p><span>$189</span></p>
+        </div>
+        <p class="font-italic">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua.
+        </p>
+        <ul>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+        </ul>
+        <p>
+          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur
+        </p>
+      </div>
+    </div>
+
+  </main>
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
