--- a/teach.html
+++ b/teach.html
@@ -80,23 +80,23 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Inner Page</h2>
+          <h2>Rotary TEACH</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Inner Page</li>
+            <li>Rotary TEACH</li>
           </ol>
         </div>
 
       </div>
     </section><!-- End Breadcrumbs Section -->
 
-    <section class="inner-page">
+    <!-- <section class="inner-page">
       <div class="container">
         <p>
           Example inner page template
         </p>
       </div>
-    </section>
+    </section> -->
 
   </main><!-- End #main -->
 
