--- a/clubservices.html
+++ b/clubservices.html
@@ -100,7 +100,7 @@
 
     <div class="row event-item event">
       <div class="col-lg-6">
-        <img src="assets/img/event-birthday.jpg" class="img-fluid" alt="">
+        <img src="assets/img/Club services/sunday_funday.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
         <h3>Birthday Parties</h3>
@@ -123,6 +123,55 @@
       </div>
     </div>
 
+    <div class="row event-item event">
+      <div class="col-lg-6">
+        <img src="assets/img/Club services/hilarity.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
+        <h3>Birthday Parties</h3>
+        <div class="price">
+          <p><span>$189</span></p>
+        </div>
+        <p class="font-italic">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua.
+        </p>
+        <ul>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+        </ul>
+        <p>
+          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur
+        </p>
+      </div>
+    </div>
+
+    <div class="row event-item event">
+      <div class="col-lg-6 poster">
+        <img src="assets/img/Club services/A_day_of_play.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
+        <h3>Birthday Parties</h3>
+        <div class="price">
+          <p><span>$189</span></p>
+        </div>
+        <p class="font-italic">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua.
+        </p>
+        <ul>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+        </ul>
+        <p>
+          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur
+        </p>
+      </div>
+    </div>
   </main>
 
   <!-- ======= Footer ======= -->
