Changed the content in Community services page

--- a/community.html
+++ b/community.html
@@ -102,22 +102,24 @@
         <img src="assets/img/community/polio.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>World Polio Day</h3>
+        <div class="event_date">
+          <p><span><strong>Event date:</strong> 24th October, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          <strong>World Polio Day</strong> was established by <strong>Rotary International</strong> over a decade ago to commemorate the birth of <strong>Jonas Salk</strong>, who led the first team to develop a vaccine against Poliomyelitis in short Polio.
         </p>
+        <p>The main aim of WHO, UNICEF and Rotaray Foundation is:</p>
         <ul>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i>To bring the permanent end to the spread of Poliovirus and to eliminate it.</li>
+          <!-- <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li> -->
         </ul>
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          <strong>Rotaract Club of GITAM</strong> is proud to announce that we are at the edge of eradicating polio.
+          <br>
+          To help <strong>Rotary</strong> in <strong>eradicating polio</strong> and to know more information,
+          <a href="https://www.rotary.org/en/our-causes/ending-polio" target="blank">Click here</a>
         </p>
       </div>
     </div>
@@ -127,22 +129,20 @@
         <img src="assets/img/community/hyderabadflood.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Hyderabad Flood relief</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date:</strong> 20th October, 2020 </span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          <strong>Rotaract Club of GITAM</strong> is so delighted to share that the money collected for the hyderabad flood relief is utilised to buy food kits for the effected people. The food kits contain basic food grains like rice, rawa, etc..
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          We thank each and every contributor for donating your best to the needy. Let's pray the god to save the lives of effected people.
         </p>
       </div>
     </div>
@@ -152,22 +152,27 @@
         <img src="assets/img/community/suicide.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3><strong>" LIFE IS FULL OF HOPES "</strong> - A Suicide Prevention Awareness Campaign</h3>
+        <div class="event_date">
+          <p><span><strong>Start Date:</strong> 6th September, 2020</span></p>
+          <p><span><strong>End Date:</strong> 13th September, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          <strong>Rotaract Club of GITAM</strong> and <strong>Rotaract Club of PVP Siddartha</strong> are here to raise the awareness on <strong>"Suicide Prevention"</strong> by sharing the various reasons behind commiting suicide and the measures to prevent it.
         </p>
+        <br>
+        <p>The online awareness campaign focuses on different age groups on each day as following: </p>
         <ul>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i> The reasons why school going children commit suicide and how to prevent it.</li>
+          <li><i class="icofont-check-circled"></i> The reasons why teenagers end their lives and it's preventive measures.</li>
+          <li><i class="icofont-check-circled"></i> The reasons why undergraduates and postgraduates kill themselves and the measures to overcome it.</li>
+          <li><i class="icofont-check-circled"></i> The reasons how an individual's  personal life makes him/her to kill themselves and it's preventive measures.</li>
+          <li><i class="icofont-check-circled"></i> The reasons how the professional life of a person effects him to commit suicide and the preventive measures to adopt.</li>
+          <li><i class="icofont-check-circled"></i> The reasons how society effects people to end their life and the preventive measures to overcome it. </li>
+          <li><i class="icofont-check-circled"></i> The overview of all the aspects under the awareness program to prevent suicide intentions.</li>
         </ul>
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          
         </p>
       </div>
     </div>
@@ -177,22 +182,26 @@
         <img src="assets/img/community/nutrition.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>National Nutrition Week</h3>
+        <div class="event_date">
+          <p><span><strong>Start Date: </strong>1st September, 2020</span></p>
+          <p><span><strong>End Date: </strong>6th September, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          National Nutrition week is observed every year to make people aware about the importance of nutrition for the Human Body and well being of health.
         </p>
+        <br>
+        <p>One of the main reasons for poor nutrition is the poor knowledge about nutrients. So, <strong>Rotaract Club of GITAM</strong> has come up with a 6 day online-awareness campaign where we share the importance of fruits, vegetables, dry fruits and many more.</p>
         <ul>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i> Day 1: Fruits and Dry Fruits</li>
+          <li><i class="icofont-check-circled"></i> Day 2: Vegetables and Leafy vegetables</li>
+          <li><i class="icofont-check-circled"></i> Day 3: Liquid and Powdered foods</li>
+          <li><i class="icofont-check-circled"></i> Day 4: Cereals, Pulses and Spices</li>
+          <li><i class="icofont-check-circled"></i> Day 5: Dairy Products</li>
+          <li><i class="icofont-check-circled"></i> Day 6: Food chart</li>
         </ul>
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          It is very important to maintain proper diet and we have to ensure that our body gets all the required nutrients in required amounts. This one week campaign  will definetly help you in preparing a balanced diet.
         </p>
       </div>
     </div>
@@ -202,22 +211,22 @@
         <img src="assets/img/community/ganesha.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>My Friend Ganesha</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date:</strong> 25th August, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          <strong>Rotaract Club of GITAM</strong> participated in the <strong>"My Friend Ganesha"</strong> project hosted by RAC GVP and presented by Zone 1 RID 3020. The project was about making Eco-friendly Ganesha idols at home by ourselves using natural products to reduce the impact of pollutants on the environment caused by the artificial colours and chemicals used in the making of ganesha idols. 
+
+
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          The Rotaractors of RACG did their part by making their own home-made eco-friendly Ganesha idols to celebrate the festival of Ganesha Chaturthi.
         </p>
       </div>
     </div>
