changed content in club and community services

--- a/clubservices.html
+++ b/clubservices.html
@@ -128,22 +128,21 @@
         <img src="assets/img/Club services/hilarity.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
+        <h3>Hilarity</h3>
         <div class="price">
-          <p><span>$189</span></p>
+          <p><span><strong>Event Date:</strong> 4th October, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          Since it is impossible for us to meet in public in this new normal online era, the Rotaract Club of GITAM has organized a club activity - 'HILARITY.' In this hyper-competitive world, everyone became so busy that no one is playing games with their family. Everyone is addicted to mobile. Previously, people used to sit together to play games like Housie, cards, and many more. 
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          So to bring in the old practice, we conducted the Tambola game through a WhatsApp group, where the participants joined and played the game enjoying themselves. 
+Over 60 students participated in the game, and everyone spent quality time together. 
         </p>
       </div>
     </div>
@@ -153,23 +152,30 @@
         <img src="assets/img/Club services/A_day_of_play.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
+        <h3>A Day of Play</h3>
         <div class="price">
-          <p><span>$189</span></p>
+          <p><span><strong>Event date:</strong> 13th September, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
-        </p>
-        <ul>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
-        <p>
+          The Rotaract Club of GITAM conducted it's first club activity of the year<br> ' A Day of Play ' where small games were conducted throughout the day.
+        </p><br>
+        <p>Morning session: Games are conducted through WhatsApp group</p>
+        <ol>
+          <li><i class="icofont-check-circled"></i> Dialogues Game</li>
+          <li><i class="icofont-check-circled"></i> Collection of things</li>
+          <!-- <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li> -->
+        </ol>
+        <br>
+        <p>Evening session: Games are conducted through Zoom online meetings</p>
+        <ol>
+          <li><i class="icofont-check-circled"></i> Draw and Guess the word (Scribble)</li>
+          <li><i class="icofont-check-circled"></i> Emoji enacting </li>
+          <!-- <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li> -->
+        </ol>
+        <!-- <p>
           Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
           velit esse cillum dolore eu fugiat nulla pariatur
-        </p>
+        </p> -->
       </div>
     </div>
   </main>
