CHanged the content in inner pages

--- a/clubservices.html
+++ b/clubservices.html
@@ -103,22 +103,21 @@
         <img src="assets/img/Club services/sunday_funday.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Sunday - Funday</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date: </strong>13th December, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          It's been days that we interacted, and even the sem-end exams are on their way. Everyone's going to be busy in a few days, so let's make this sunday a funday.
         </p>
-        <ul>
+        
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          A fun movement with lots of joy and entertainment.
         </p>
       </div>
     </div>
@@ -129,7 +128,7 @@
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
         <h3>Hilarity</h3>
-        <div class="price">
+        <div class="event_date">
           <p><span><strong>Event Date:</strong> 4th October, 2020</span></p>
         </div>
         <p class="font-italic">
@@ -153,7 +152,7 @@ Over 60 students participated in the game, and everyone spent quality time toget
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
         <h3>A Day of Play</h3>
-        <div class="price">
+        <div class="event_date">
           <p><span><strong>Event date:</strong> 13th September, 2020</span></p>
         </div>
         <p class="font-italic">
