--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Delicious Bootstrap Template - Index</title>
+  <title>Rotaract Club of GITAM - Index</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -60,7 +60,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#avenues">Avenues</a></li>
-          <li><a href="#specials">Specials</a></li>
+          <li><a href="#specials">Ingenio</a></li>
           <li><a href="#events">Events</a></li>
           <li><a href="#chefs">Chefs</a></li>
           <li><a href="#gallery">Gallery</a></li>
@@ -245,7 +245,7 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="community.html">Community services</a>
+              <a href="community.html"><h3>Community services</h3></a>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -254,7 +254,7 @@
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="professional.html">Professional services</a>
+              <a href="professional.html"><h3>Professional services</h3></a>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -263,7 +263,7 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="clubservices.html">Club services</a>
+              <a href="clubservices.html"><h3>Club services</h3></a>
             </div>
             <div class="menu-ingredients">
               A delicate crab cake served on a toasted roll with lettuce and tartar sauce
@@ -272,7 +272,7 @@
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="youth.html">Youth services/ New Generation</a>
+              <a href="youth.html"><h3>Youth services/ New Generation</h3></a>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -281,7 +281,7 @@
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="teach.html">Rotary TEACH</a>
+              <a href="teach.html"><h3>Rotary TEACH</h3></a>
             </div>
             <div class="menu-ingredients">
               Grilled chicken with provolone, artichoke hearts, and roasted red pesto
@@ -290,7 +290,7 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="international.html">International services</a>
+              <a href="international.html"><h3>International services</h3></a>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -329,12 +329,12 @@
       </div>
     </section><!-- End Menu Section -->
 
-    <!-- ======= Specials Section ======= -->
-    <section id="specials" class="specials">
+    <!-- ======= ingenio Section ======= -->
+    <section id="ingenio" class="ingenio">
       <div class="container">
 
         <div class="section-title">
-          <h2>Check our <span>Specials</span></h2>
+          <h2>Check our <span>Fest</span></h2>
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
