--- a/international.html
+++ b/international.html
@@ -103,22 +103,22 @@
         <img src="assets/img/international/milange.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3><strong>Melange</strong>- Divided by States, United by Rotaract</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date:</strong> 30th August, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          Rotaract Club of GITAM collaborated with Rotaract Club of Heritage Institute of Technology in the project " Melange - Divided by States , United by Rotaract " . The event was about knowing different food, demographic, geographic & cultural diversities of various states in India.
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          Rotaractors of Rotaract Club of GITAM participated in the event and represented the food & culture of Andhra Pradesh and demonstrated a video presentation on the topic.
+A mini game called Tambola was also conducted for the participants. 
+The event was very lovable and we got to know about different states and their culture. 
         </p>
       </div>
     </div>
