--- a/youth.html
+++ b/youth.html
@@ -102,22 +102,28 @@
         <img src="assets/img/youth/yoga.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Yoga Anandam</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date:</strong> 21st November, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          <i>" Yoga doesn't transform the way we see things; it transforms the person who sees "</i>
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          Yoga is a group of physical, mental, and spiritual disciplines which originated in ancient India. It is one among the six schools of the Hindu philosophical traditions . The practise of Yoga has been studied to date back to pre-Vedic Indian traditions.
+        </p>
+        <p>
+          Aside from the physical benefits like weight loss, body flexibility, etc., Yoga helps a person to manage stress . It also helps in reducing back pain, neck pain, sleeping problems, headaches, inability to concentrate and many more.
+        </p>
+        <p><strong>About the speaker:</strong>
+          <strong>P.S.Shivani</strong>
+          <br>
+          She is a student of M.A. Applied Psychology in GITAM School of Gandhian Studies . She has been practising Yoga for one and a half years. 
         </p>
       </div>
     </div>
@@ -127,23 +133,22 @@
         <img src="assets/img/youth/essay.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Priya Sikshika</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date:</strong> 5th September, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          Rotaract Club of GITAM conducted an Essay Writing Competition "Priya Sikshika" on the account of Teacher' day - 5 September, 2020.
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          The participants were asked to write an essay on the topic of ' My favourite teacher ' . We had many entries and the top 3 essays were selected from them and adjudged winner by an English Professor, a faculty at GITAM ( Deemed to be University ) 
         </p>
+        <p>The winners were awarded certificates. It also provided them an opportunity to express their feelings about their favourite teacher and made them cherish those memorable moments back in their life.</p>
       </div>
     </div>
 
@@ -152,22 +157,22 @@
         <img src="assets/img/youth/photography.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Photography Contest</h3>
+        <div class="event_date">
+          <p><span><strong>Start Date:</strong> 13th August, 2020</span></p>
+          <p><span><strong>End Date:</strong> 19th August, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          The Rotaract Club of GITAM came up with a Photography contest to unveil the photography skills and talents among students. The theme of the contest was "Still life photography" which is used for the depiction of inanimate objects like food , flowers, desk place, and many more.
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          The winners received a certificate along with a cash prize of 350₹ each.
+          All the participants were given a participation certificate
         </p>
       </div>
     </div>
