--- a/professional.html
+++ b/professional.html
@@ -102,23 +102,24 @@
         <img src="assets/img/professional/micro.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Micro Video Mastery</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date:</strong>29th November, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          <strong>Topic:</strong> Use the power of Micro-Videos to get known, get leads & get sales
         </p>
+        <p>What exactly you will learn?:</p>
         <ul>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i> Learn benefits and To build your Brand online</li>
+          <li><i class="icofont-check-circled"></i> Learn all the hacks to build & increase your brand visibility online by using Micro Videos </li>
+          <li><i class="icofont-check-circled"></i> Capture high-quality leads by using a unique method in your digital marketing campaigns.</li>
+          <li><i class="icofont-check-circled"></i> Establish influence and authority in your niche.</li>
         </ul>
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          <strong>Note :</strong> Only the first 200 participants can join the WhatsApp group. So be fast and grab your seat by entering into the group. 
         </p>
+        <p><strong>All Rotaractors and Non-Rotaractors are welcome.</strong></p>
       </div>
     </div>
 
@@ -127,22 +128,20 @@
         <img src="assets/img/professional/designers.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Recruitment : Graphic Designers and Video editors</h3>
+        <div class="event_date">
+          <p><span><strong>Recruitment Date :</strong>22nd October, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          Rotaract Club of GITAM feels exhilarated to recruit new poster designers and video editors . If you have a knack on designing, then this is the right choice for you.
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          <strong>Last Date for registration:</strong> 25th October, 2020
         </p>
       </div>
     </div>
@@ -152,22 +151,21 @@
         <img src="assets/img/professional/speakout.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Speak Out - To know your worth</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date: </strong>11th October, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          English plays a vital role in our life. Wherever you are in this world, you can easily communicate through English. It connects the world.
+The Rotaract Club of GITAM organized a webinar on English speaking skills, 'Speak out - To know your worth.' 
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          We all knew English as a language of communication, but English is a language of opportunities which is useful for career growth. Developing English speaking skills will help us express our views without fear.
         </p>
       </div>
     </div>
@@ -177,22 +175,20 @@
         <img src="assets/img/professional/rotavoice.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Rota-Voice</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date: </strong>27th September, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          Communication plays a vital role in our life. Even though we have lot of knowledge, it can be used only when we can express it in a right way. Communication is not as hard as it looks, one can attain a good communication skill, if he/she participate in group discussions, debates, elocutions and many more activities.
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          <strong>Rota Voice</strong> is - An interactive debate session where one can learn and discuss about a topic. It helps to improve our communication skills and also gives the courage to withstand and express your feelings in crowds.
         </p>
       </div>
     </div>
@@ -202,22 +198,28 @@
         <img src="assets/img/professional/heroes.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Heroes come in all types</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date: </strong>20th September 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          Saving a life can be possible through a simple act like donating blood. It's an easy, selfless, and a  painless way to contribute to your community during this time of the COVID-19 PANDEMIC.
+          A single blood donation can potentially save upto 3 lives . And anyone in between the age 18-60 years, can donate blood once in 3 months. Added to this, plasma is the need of the hour.</p>
+        <p>
+          <strong>Did you know?</strong><br>
+          If you are a COVID-19 survivor, your plasma now contains COVID-19 antibodies and they play a prominent role in fighting the virus in other contracted individuals with your transfused plasma.
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          To address the importance of Plasma and Blood Donation, Rotary International District 3020 presents
+
+    <strong>" Heroes come in all types "</strong> 
+
+A webinar on <strong>"Plasma and Blood donation during COVID-19”</strong> hosted by Rotaract Club of GITAM.
         </p>
       </div>
     </div>
@@ -227,22 +229,23 @@
         <img src="assets/img/professional/mitahara.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Mitahara</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date: </strong>6th September, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          Due to the global pandemic, many people lost their lives and some are in critical conditions. One of the main reasons behind this is the lack of immunity power in the body. It is very important to maintain a good balanced diet where we get all the required nutrients for the body so that our immunity system can fight against the diseases.
         </p>
+        <p>But do you know,</p>
         <ul>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i> How to maintain a good balanced diet?</li>
+          <li><i class="icofont-check-circled"></i> How to improve the immunity power of the body?</li>
+          <!-- <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li> -->
         </ul>
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          To make you know the answers for the above questions, Rotaract Club of GITAM presents " MITAHARA " 
+a webinar on " The role of nutrition in supporting the immune system relative to COVID-19 " by    
+K.B. Kalpana ma'am.
         </p>
       </div>
     </div>
@@ -252,22 +255,23 @@
         <img src="assets/img/professional/mental_health.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Mental Health and Well Being</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date: </strong>30th August, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          " Each morning we are born again, What we do today is what matters most "
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
+        </ul> -->
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          Depression is a state of low mind and aversion to activity. It can affect a person's thoughts, behavior, motivation, feelings, and sense of well-being. No one wishes to have dark days, sleepless nights, grumpy mornings and this endless dark tunnel with no sign that it ever ends. Depression is not a choice. 
+        </p>
+        <p>
+          To increase the positiveness in you and to bring out the real you, Rotaract Club of GITAM is presenting you a webinar on " Mental Health and Well-being " by " Dr. Deepa Mohan ".
         </p>
       </div>
     </div>
@@ -277,22 +281,20 @@
         <img src="assets/img/professional/Indian_armed.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Life in Indian Armed Forces</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date:</strong> 16th August, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          Rotaractors from the Rotaract Club of GITAM had organised a webinar on the topic “LIFE IN INDIAN ARMED FORCES” as part of INDEPENDENCE DAY celebration with guest speaker Commander Gurumurthy Gangadharan (retd). He is the Director of Training & Placements, GITAM (Deemed to be University), Visakhapatnam. 
         </p>
         <ul>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i> Have you ever thought how hard it is to be like a soldier?</li>
+          <li><i class="icofont-check-circled"></i> Do you know the struggle of Indian Army/Navy soldiers?</li>
+          <li><i class="icofont-check-circled"></i> Do you know the obstacles they face in the camps at the border?</li>
         </ul>
         <p>
-          Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur
+          To make you know the answers for the above questions, Rotaract Club of GITAM is organizing a webinar on <strong>" Life in Indian Armed Forces "</strong> by Commander Gurumoorthy Gangadharan Sir(Retd.)
         </p>
       </div>
     </div>
@@ -302,23 +304,22 @@
         <img src="assets/img/professional/youth_engagement.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
-        <h3>Birthday Parties</h3>
-        <div class="price">
-          <p><span>$189</span></p>
+        <h3>Youth Engagement for Global Action</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date:</strong> 12th August, 2020</span></p>
         </div>
         <p class="font-italic">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.
+          Rotaractors from the Rotaract Club of GITAM had organised a webinar on the topic “YOUTH ENGAGEMENT FOR GLOBAL ACTION” on the occasion of International Youth day  with guest speaker Mr. Naga Sravan Kilaru. Mr. Naga Sravan Kilaru from Andhra Pradesh. He is a TEDx speaker and also a National Youth Awardee. He is the founder of Yuvagalam, an organisation for youth. The webinar was a successful event and all the participants were enlightened about the youth action and their importance for our nation’s development. 
         </p>
-        <ul>
+        <!-- <ul>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
           <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
           <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-        </ul>
-        <p>
+        </ul> -->
+        <!-- <p>
           Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
           velit esse cillum dolore eu fugiat nulla pariatur
-        </p>
+        </p> -->
       </div>
     </div>
 
