--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#avenues">Avenues</a></li>
-          <li><a href="#specials">Ingenio</a></li>
+          <li><a href="#ingenio">Ingenio</a></li>
           <li><a href="#events">Events</a></li>
           <li><a href="#chefs">Chefs</a></li>
           <li><a href="#gallery">Gallery</a></li>
@@ -334,8 +334,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Check our <span>Fest</span></h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <h2>Check out our <span>Annual Fest</span></h2>
+          <h3>Ingenio</h3>
         </div>
 
         <div class="row">
